--- a/src/Row.css
+++ b/src/Row.css
@@ -1,8 +1,12 @@
+.row {
+  margin-left: 20px;
+}
+
 .row_posters {
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
-  padding: 20px 0px;
+  padding: 20px 10px;
 }
 .row_posters::-webkit-scrollbar {
   display: none;
@@ -18,5 +22,10 @@
 
 .row_poster:hover {
   transform: scale(1.08);
+  opacity: 1;
+}
+
+.row_posterLarge {
+  height: 250px;
   opacity: 1;
 }
