--- a/src/Row.css
+++ b/src/Row.css
@@ -9,9 +9,14 @@
   overflow-x: scroll;
   padding: 20px 10px;
 }
+
 .row_posters::-webkit-scrollbar {
-  display: none;
-}
+    display: none !important;
+    width: 0 !important;
+    height: 0 !important;
+    -webkit-appearance: none;
+    background: transparent; 
+  }
 
 .row_poster {
   object-fit: contain;
